k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - rivercollective.com
        - www.rivercollective.com
      secretName: rivercollective-com
  rules:
    - host: rivercollective.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 7777
          - path: /api/
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
    - host: www.rivercollective.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 7777
          - path: /api/
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
